--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ nav{
     position:fixed;
     width: calc(100% - 10px);
     border-radius: 10px 10px 10px 10px;
+    z-index: 1;
 }
 #title{
     text-align: center;
@@ -47,9 +48,8 @@ header{
 }
 
 #creatuser{
-    width: 500px;
-    height: 220px;
     border: solid 1px black;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -65,11 +65,17 @@ header{
 }
 
 #creatuser{
-    margin:auto;
+    margin:0 20%;
 }
 
 #creatuserinfo input{
-    text-align: right;
+    width: 50%;
+    text-align: left;
+}
+
+#department{
+    width: 51%;
+    margin: 0 4rem 0 0;;
 }
 
 #button{
@@ -107,4 +113,68 @@ header{
 
 .usertext{
     margin: 16px 2px;
+}
+
+@media only screen and (max-width: 600px){
+    nav{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    #navbar{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    nav a {
+        padding: 5px;
+        margin:0 0 0 10px;
+    }
+    header{
+        margin: 8rem 0 0 0;
+    }
+
+    #creatuser{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        border: solid 1px black;
+    }
+    .creatlabel{
+        margin: auto;
+        font-size: 2rem;
+        padding: 3px 5rem 3px 0;
+        text-align: left;
+    }
+    #creatuserinfo{
+        display:flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    #creatuserinfo label{
+        margin: 0 5rem 5px 0;;
+    }
+
+    #creatuserinfo input{
+        width: 68%;
+        margin: 0 5rem 0 1rem;;
+    }
+
+    #department{
+        width: 70%;
+        margin: 0 5rem 0 1rem;;
+    }
+    br {
+        display: none;
+    }
+    #button{
+        display: flex;
+        flex-direction: column;
+        margin: 5px 70px;
+    }
+    #usercard{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-around;
+    }
 }
