--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ nav{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     position:fixed;
     width: calc(100% - 10px);
     border-radius: 10px 10px 10px 10px;
@@ -24,6 +24,7 @@ nav a {
 }
 
 #navbar :first-child{
+    padding:0 10px 0 0;
     font-weight: bold;
 }
 
